# MAVLINK-Nvdia-Jetson

./: .gitignore  README.md  pyproject.toml
autonomy/src/uav_autonomy/: __init__.py  config.py  failsafe_manager.py  health_monitor.py  mavlink_bridge.py  mission_manager.py  models.py  perception_inference.py  pipeline.py  safety_guardian.py  sensor_fusion.py  target_tracker.py  topics.py
autonomy/tests/: test_failsafe_manager.py  test_mission_manager.py  test_pin_matrix_contract.py  test_pipeline_faults.py  test_px4_firmware_assets.py  test_safety_guardian.py
configs/: autonomy.yaml
flight_stack/: __init__.py
flight_stack/px4/: __init__.py
flight_stack/px4/firmware/companion_guard/: CMakeLists.txt  companion_guard.cpp
flight_stack/px4/params/: offboard_profile.params
flight_stack/px4/scripts/: __init__.py  check_param_profile.py
hardware/: bom.yaml  pin_matrix.csv
scripts/: run_local_sim.py  validate_pin_matrix.py
